2006-02-26  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/CMakeTestASMCompiler.cmake: added
	
	* Makefile.am: add CMake modules to EXTRA_DIST
	
	* admin/CMakeModules/FindSleepFunction.cmake: typo in windows check
	
	* CMakeLists.txt: nmake doesn't like "-" in target name; Windows/VC++
	doesn't need libm; define needed for TryEnterCriticalSection;conditionally
	compile debugging code

2006-02-24  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/Makefile.am, src/al_debug.c: Conditionally compile
	debugging code.

	* src/al_debug.h: When no debug output is needed, inline _alDebug
	to a no-op, removing quite a lot of useless code from a production
	build (about 24kB on my x86 Linux) and getting some small performance
	gain. Using variadic macros is probably less portable.

	* src/al_source.c: Removed the rather obscure feature of being able to
	initialise the source rolloff factor attributes via a configuration file
	variable "source-rolloff-factor". If we want such a feature, it should
	be handled via a more general way for all source/listener/...
	attributes.

	* src/al_filter.c: Previously, the source position used for attenuating
	non-directional sources was the listener position. This is wrong, it
	should be (0,0,0).

	* src/backends/alc_backend_esd.c: Open connection to EsounD daemon only
	once. More simplifications.

2006-02-22  Sven Panne  <sven.panne@aedion.de>

	* admin/autotools/.indent.pro, configure.ac,
	src/backends/alc_backend_esd.c: Heavily cleaned up EsounD backend.

2006-02-21  Erik Hofman <erik@ehofman.com>

	* src/backends/alc_backend.h, src/backends/alc_backend_irix.c: Fix the
	IRIX backend again.

	* src/backends/alc_backend_wave.c: (const void *) to (void *)
	conversion.

2006-02-21  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: bump version

2006-02-21  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/Makefile.am: Added version info and bumped it