@@ -27,9 +27,6 @@
 #include <AL/alext.h>
 #include <stdio.h>
 #include <stdlib.h>
-#include <sys/time.h>
-#include <sys/types.h>
-#include <unistd.h>
 
 #include "backends/alc_backend.h"
 
