@@ -11,15 +11,11 @@
 
 #include <AL/al.h>
 #include <AL/alext.h>
-#include <errno.h>
 #include <fcntl.h>
 #include <linux/soundcard.h>
 #include <stdio.h>
-#include <stdlib.h>
 #include <string.h>
 #include <sys/ioctl.h>
-#include <sys/mman.h>
-#include <sys/stat.h>
 #include <sys/time.h>
 #include <sys/types.h>
 #include <unistd.h>
