@@ -9,6 +9,11 @@
 	* CMakeLists.txt: nmake doesn't like "-" in target name; Windows/VC++
 	doesn't need libm; define needed for TryEnterCriticalSection;conditionally
 	compile debugging code
+	
+	* src/al_config.c, src/al_main.c, src/al_mixer.c,
+	src/backends/alc_backend_null.c, src/backends/alc_backend_wave.c,
+	src/backends/alc_backend_alsa.c, src/backends/alc_backend_linux.c:
+	remove unneeded headers
 
 2006-02-24  Sven Panne  <sven.panne@aedion.de>
 
